# ceep-v1

./: .gitignore  ALL_AGENTS_COMPLETE.md  AUTHORS.md  BENCHMARKING_COMPLETE.md  BENCHMARK_DELIVERY_REPORT.md  BRAIN_CLOT_DETECTION_README.md  BRAIN_IMAGING_VALIDATION.py  BUGS_FIXED.md  CEEP_FIX_NEEDED.md  CEEP_VS_MEEP_COMPARISON.py  CHANGELOG.md  CITATION.cff  COLAB_BENCHMARK_NOTEBOOK.py  COLAB_COMPLETE_SETUP.md  COLAB_FIX_FINAL.md  COLAB_INSTALL_TEST.md  COLAB_INSTRUCTIONS.txt  COLAB_NEW_USER_TEST.py  COLAB_QUICK_FIX.md  COLAB_QUICK_START.txt  COLAB_SETUP_FIX.md  COLAB_SETUP_INSTRUCTIONS.md  COLAB_SIMPLE_TEST.py  COMPLETE_SESSION_SUMMARY.md  COMPREHENSIVE_DIAGNOSIS.md  CPML_CORRECT_IMPLEMENTATION.md  CPML_IMPLEMENTATION_PLAN.md  CPML_REFERENCE.md  CPML_REWRITE_PLAN.md  CRITICAL_FINDINGS.md  CURRENT_OBJECTIVE.md  DATASET_DIAGNOSIS.md  DATASET_FIX_SUMMARY.md  DEBUG_CPML.py  DEBUG_CPML_DETAILED.py  FIXES_APPLIED.md  FOR_NEW_USERS.md  GOOGLE_COLAB_BENCHMARK_GUIDE.md  GOOGLE_COLAB_SETUP.md  KNOWN_ISSUES.md  (+51 more)
.github/workflows/: docs.yml  publish.yml  tests.yml
benchmarks/: BENCHMARK_DESIGN.md  BENCHMARK_README.md  README.md  analyze_results.py  batched_2d_benchmark.py  batched_2d_results.md  batched_3d_results.md  benchmark_raw_data.json  cpu_scaling.py  generate_plots.py  gpu_vs_cpu.py  pml_reflection.py  quick_validation.py  run_full_benchmark.sh
colab_cells/: cell10_antenna_array_16x16.py  cell11_batched_antenna_array.py  cell1_setup.py  cell2_verify_gpu.py  cell3_gpu_validation_tests.py  cell4_benchmark.py  cell5_manual_gpu_speedup.py  cell6_meep_freespace.py  cell7_meep_dielectric_slab.py  cell8_meep_pml_quality.py  cell9_summary.py
dataset_gpu/metadata/: sample_000002.json  sample_000003.json  sample_000005.json  sample_000008.json  sample_000010.json  sample_000011.json  sample_000013.json  sample_000016.json  sample_000019.json  sample_000021.json  sample_000022.json  sample_000026.json  sample_000027.json  sample_000028.json  sample_000029.json  sample_000030.json  sample_000032.json  sample_000034.json  sample_000037.json  sample_000039.json  sample_000040.json  sample_000042.json  sample_000043.json  sample_000044.json  sample_000045.json  sample_000047.json  sample_000048.json  sample_000049.json  sample_000051.json  sample_000053.json  sample_000055.json  sample_000059.json  sample_000062.json  sample_000063.json  sample_000066.json  sample_000067.json  sample_000068.json  sample_000071.json  sample_000072.json  sample_000076.json  (+10 more)
dataset_gpu_corrected/: correction_metadata.json
dataset_gpu_corrected/metadata/: sample_000000.json  sample_000001.json  sample_000004.json  sample_000006.json  sample_000007.json  sample_000009.json  sample_000012.json  sample_000014.json  sample_000015.json  sample_000017.json  sample_000018.json  sample_000020.json  sample_000023.json  sample_000024.json  sample_000025.json  sample_000031.json  sample_000033.json  sample_000035.json  sample_000036.json  sample_000038.json  sample_000041.json  sample_000046.json  sample_000050.json  sample_000052.json  sample_000054.json  sample_000056.json  sample_000057.json  sample_000058.json  sample_000060.json  sample_000061.json  sample_000064.json  sample_000065.json  sample_000069.json  sample_000070.json  sample_000073.json  sample_000074.json  sample_000075.json  sample_000078.json  sample_000080.json  sample_000081.json  (+10 more)
datasets/: README.md
docs/: index.md
docs/api/: antennas.md  imaging.md  materials.md  solvers.md
docs/architecture/: README.md  fdtd_base_design.md  overview.md
docs/benchmarks/: README.md
docs/getting-started/: colab.md  installation.md  quickstart.md
docs/guide/: 3d.md  antenna-arrays.md  gpu.md  imaging-pipeline.md  materials.md
docs/research_notes/: README.md
docs/theory/: README.md  dispersive_materials.md  maxwell_fdtd.md  pml.md
docs/tutorials/: README.md  first_simulation.md
examples/: COLAB_RADAR_QUICKSTART.md  README.md  README_RADAR.md  basic_2d_fdtd.py  batched_3d_brain_imaging.py  biomedical_hemorrhage_detection.py  dielectric_slab.py  radar_2d_ula_beamforming.py  radar_3d_ula_farfield.py  radar_colab_t4_optimized.py  radar_complete_with_beamforming.py  radar_corrected.py  radar_far_field.py  radar_final_complete.py  radar_l_shaped_fixed.py  radar_smart_complete.py  radar_working.py  waveguide.py
papers/: README.md
scripts/: README.md  analyze_gpu_dataset.py  ceep_vs_meep_radar.py  check_gpu.py  colab_compare_all_examples.py  colab_diagnose.py  colab_simple_test.py  compare_ceep_meep_sample.py  compare_meep.py  comprehensive_meep_validation.py  correct_dataset_magnitude.py  generate_corrected_dataset.py  meep_radar_validation.py  meep_reference_simulation.py  meep_validation.py  radar_test.py  test_meep_vs_ceep.py  verify_dataset_with_das.py
src/ceep/: __init__.py
src/ceep/antennas/: __init__.py  (+1 more)
src/neurowave/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_antenna_arrays.py  test_core.py  test_dft.py  test_fdtd_2d.py  test_fdtd_2d_edge_cases.py  test_fdtd_3d.py  test_fdtd_3d_advanced.py  test_fdtd_3d_batched.py  test_gpu.py  test_meep_validation.py  test_performance_regression.py  test_phantoms.py  test_tissue_database.py
(+55 files in other folders)
