[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ceep"
version = "0.1.0"
description = "CEEP: CUDA Electromagnetic Exploration Platform - GPU-Accelerated FDTD for Biomedical Imaging"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Shahzaib Ur Rehman", email = "shahzaibelbert@gmail.com"}
]
keywords = [
    "electromagnetics",
    "FDTD",
    "Maxwell",
    "CUDA",
    "GPU",
    "simulation",
    "microwave-imaging",
    "computational-physics",
    "biomedical",
    "antenna-array",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=12.0.0",
]
science = [
    "scipy>=1.10.0",
    "h5py>=3.8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
all = [
    "ceep[gpu,science,dev,docs]",
]

[project.urls]
Homepage = "https://shahzaibshazoo.github.io/ceep-v1"
Documentation = "https://shahzaibshazoo.github.io/ceep-v1"
Repository = "https://github.com/shahzaibshazoo/ceep-v1"
Issues = "https://github.com/shahzaibshazoo/ceep-v1/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests requiring GPU",
]
